--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Li Haoxin's Website</title>
 </head>
 <body>
-    Hello World!
+<p align="center">Hello World!</p>
 </body>
-</html
+</html>
