--- a/LHX.html
+++ b/LHX.html
@@ -8,7 +8,7 @@
 <center>
     <h1>你好！我叫李浩鑫，很高兴认识你！</h1>
     <h1>这是我搭建的第一个网站，能做到这一步，得感谢加速器计划提供的学习路线图</h1>
-    <h1>”我们帮助大家设置学习计划，每个阶段的学习目标，和相关资料的甄选和搜集。“</h1>
+    <h1>“我们帮助大家设置学习计划，每个阶段的学习目标，和相关资料的甄选和搜集。”</h1>
     <h1>如果没有详细的学习路线指引，我或许得多走很多弯路</h1>
     <h1>很高兴我选择了加入此计划</h1>
     <h1>大鹏一日因风起，扶摇直上九万里！</h1>
